--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NODE_ENV=development
 
-MONGODB=mongodb://db:27017/apostrophe
+APOS_MONGODB_LOG_LEVEL=info
+APOS_MONGODB_URI=mongodb://db:27017/apostrophe
